[package]
name = "replays-wa"
version = "0.2.0"
authors = ["Cloud9 <wolke@team-oze.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
replay = { path = "crates/replay-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
console_log = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
wasm-pack = "0.13.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
